--- a/gb/19/4/25/n11212744.md
+++ b/gb/19/4/25/n11212744.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aqcayd3630/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aqcayd3630/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aqcayd3630/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aqcayd3630/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aqcayd3630/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>超商及咖啡店骑楼全面禁烟 新北建无烟环境</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/760d30089e438ed08e6f7455aaa11a80-600x400.jpg" />
 <h6>超商及咖啡店骑楼禁烟，各超商与卫生局长合影，（宋顺澈 ／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年4月25日讯】（大纪元记者宋顺澈台湾新北市报导）新北市卫生局有鉴于近年来喝咖啡蔚为时尚，营造无烟清新环境也与时俱进。卫生局表示，除了提报市府公安会议等全国最严格的取缔手段以外，新北市即日起“连锁超商及咖啡店骑楼全面<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E7%A6%81%E7%83%9F.md#1">禁烟</a>”首波包含7-ELEVEN、全家、OK、莱尔富、美廉社、星巴克、85度C、路易莎咖啡8家计约2,600处。目前为宣导期，9月1日起卫生局将加强派员稽查及取缔，最高可罚款1万元。</p>
-<p>卫生局长陈润秋表示，烟品不仅危害个人健康，烟品暴露更可经由多种管道或形式影响健康，诸如二手烟甚至是三手烟。根据世界卫生组织资料，全球每年因烟害而死亡人數高达550万人，若不采取积极防制措施，到2030年死于烟害将超过800万人。此次<ahref="https://github.com/aqcayd3630/djy/blob/master/gb/tag/%E7%A6%81%E7%83%9F.md#1">禁烟</a>范围有别于以往室内公共场所，再度领先全国扩大至店家骑楼全面禁烟。</p>
-<p>陈润秋说明，新北市成人吸烟率及青少年吸烟率已有下降趋势且低于全国平均，但在室外公共场所二手烟暴露率部分仍高于全国，为保护市民免于二手烟危害，虽然骑楼不是法定的禁烟场所，但依烟害防制法规定，各级主管机关可以自行公告指定。106年新北市室外公共场所二手烟暴露率57%，107年公告诊所前骑楼禁烟后，暴露率降到53%，如今再加上随处可见的“连锁超商及咖啡店骑楼”这块大版图，可使新北市朝无烟安居城市再迈出一大步。</p>
+<p>【大纪元2019年4月25日讯】（大纪元记者宋顺澈台湾新北市报导）新北市卫生局有鉴于近年来喝咖啡蔚为时尚，营造无烟清新环境也与时俱进。卫生局表示，除了提报市府公安会议等全国最严格的取缔手段以外，新北市即日起“连锁超商及咖啡店骑楼全面<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%81%E7%83%9F.md#1">禁烟</a>”首波包含7-ELEVEN、全家、OK、莱尔富、美廉社、星巴克、85度C、路易莎咖啡8家计约2,600处。目前为宣导期，9月1日起卫生局将加强派员稽查及取缔，最高可罚款1万元。</p>
+<p>卫生局长陈润秋表示，烟品不仅危害个人健康，烟品暴露更可经由多种管道或形式影响健康，诸如二手烟甚至是三手烟。根据世界卫生组织资料，全球每年因烟害而死亡人數高达550万人，若不采取积极防制措施，到2030年死于烟害将超过800万人。此次<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%81%E7%83%9F.md#1">禁烟</a>范围有别于以往室内公共场所，再度领先全国扩大至店家骑楼全面禁烟。</p>
+<p>陈润秋说明，新北市成人吸烟率及青少年吸烟率已有下降趋势且低于全国平均，但在室外公共场所二手烟暴露率部分仍高于全国，为保护市民免于二手烟危害，虽然骑楼不是法定的禁烟场所，但依烟害防制法规定，各级主管机关可以自行公告指定。2017年新北市室外公共场所二手烟暴露率57%，2018年公告诊所前骑楼禁烟后，暴露率降到53%，如今再加上随处可见的“连锁超商及咖啡店骑楼”这块大版图，可使新北市朝无烟安居城市再迈出一大步。</p>
 <p>卫生局简任技正林惠萍表示，新北市目前公告无烟环境有公园绿地、高中以下校门口、家长接送区、周边人行道、公车候车亭及诊所前骑楼，再加上连锁超商及咖啡店骑楼全面禁烟，总计约8,700处。林惠萍说明，有些商家会在骑楼摆设桌椅，卫生局也将与设置骑楼座位区的业者洽谈合作公告无烟场所，鼓励更多业者加入骑楼禁烟行列，携手共建无烟清新的居家环境。◇</p>
 <p>责任编辑：芸清</p>
 
@@ -16,42 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/17/4/1/n8992527.md#1">德州大学系统今夏开始全面禁烟</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/17/11/13/n9835254.md#1">巨城接驳车候车亭将全面禁烟  不倒骑士共同响应</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/5/16/n10399736.md#1">下车见天就吸烟小心挨罚！高铁站外禁烟46人被取缔</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/9/13/n10712526.md#1">加拿大今年53所高校全面禁烟 同比倍增</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/19/1/4/n10953669.md#1">打造无烟校园  嘉大续推禁烟令</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/11/n12322809.md#1">侯友宜：边境严管才能守住民众健康</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12319739.md#1">助弱势交通 国广公司张国龙捐赠复康巴士</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/7/n12313681.md#1">新北市音乐剧节 动画音乐剧闪耀登场</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/5/n12308774.md#1">新北5大场所采实名制 侯友宜：违规就罚</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/3/n12302993.md#1">感谢爸爸为家庭付出 树林区模范父亲表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/1/n8992527.md#1">德州大学系统今夏开始全面禁烟</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/11/13/n9835254.md#1">巨城接驳车候车亭将全面禁烟  不倒骑士共同响应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/16/n10399736.md#1">下车见天就吸烟小心挨罚！高铁站外禁烟46人被取缔</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/13/n10712526.md#1">加拿大今年53所高校全面禁烟 同比倍增</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/4/n10953669.md#1">打造无烟校园 嘉大续推禁烟令</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674579.md#1">新北魔法水乐园 市府大厅邀你探索黑龙江</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672349.md#1">儿童节好礼物 熊猴森海世界水乐园热闹玩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672363.md#1">主顾修女会新家园动土 塭仔圳关怀长辈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13665047.md#1">特定工厂纳管辅导转正 新北9成符合收件规定</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/20/n13660066.md#1">新北蓝海舰队年清千吨海废 又增8艘加入</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436585.md#1" target="_blank">李小刚：十年文革灾难性后果探究</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12319988.md#1">桃园妇见邻近空屋没人住 竟花28万装潢入住</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12318484.md#1">【更新】周庭被捕 黎智英之后第十人</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/11/n12322303.md#1">中国制口罩伪装MIT闯关入台 海关单日查获7350片</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12319818.md#1">中共称制裁11美国人 卢比奥等回应</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/11/n12321403.md#1">中共制裁美国人 逮捕黎智英 蓬佩奥强硬回应</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12318283.md#1">与李小龙交手谁会赢 成龙的回答令人不齿</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12318600.md#1">TWICE线上开唱126国粉丝参与 子瑜新造型亮相</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12317932.md#1">用筷子扒拉菜被批素质低 赵丽颖获嘉宾帮澄清</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12318111.md#1">胡歌主演新剧 被王家卫要求减重8至10公斤</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/10/n12320539.md#1">林夕改编歌词赠罗冠聪 无知网军污蔑成笑柄</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/9/n12317099.md#1">疫情下意大利圣母雕像流血泪 引民众围观</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/8/7/n12313595.md#1">“女子无才便是德”究竟是什么意思</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/7/30/n12295393.md#1">文莱国王率王族入华 明成祖御制镇国碑文</a></li>
-<li><a href="https://github.com/aqcayd3630/djy/blob/master/gb/20/7/18/n12265329.md#1">【医案】驽马十驾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aqcayd3630/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aqcayd3630/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/25/n11212744.htm">超商及咖啡店骑楼全面禁烟 新北建无烟环境</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/25/n11212744.htm">超商及咖啡店骑楼全面禁烟 新北建无烟环境</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/aqcayd3630/djy/blob/master/gb/19/4/25/n11212744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aqcayd3630/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aqcayd3630/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aqcayd3630/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aqcayd3630/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/4/25/n11212744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
